syntax = "proto3";

package graplinc.grapl.pipeline.v1beta2;

import "google/protobuf/any.proto";
import "graplinc/grapl/pipeline/v1beta1/types.proto";

// A wrapper message for pipeline data. Includes useful metadata to help
// services determine what they should do with the inner_message.
message NewEnvelope {
  // Metadata about this message
  graplinc.grapl.pipeline.v1beta1.Metadata metadata = 1;

  // The serialized bytes of the inner message, along with its type
  google.protobuf.Any inner_message = 2;
}
